--- a/gallery.css
+++ b/gallery.css
@@ -1,226 +1,318 @@
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
 body{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 1.7;
-    color: #343434;
-    background-color: #f1f2f6;
-    overflow-x: hidden;
-    text-align: center;
+ font-family: 'Poppins', sans-serif;
+ font-weight: 300;
+ font-size: 15px;
+ line-height: 1.7;
+ color: #343434;
+ background-color: hashtag#f1f2f6;
+ overflow-x: auto;
+ text-align: center;
 }
 a {
-    cursor: pointer;
+ cursor: pointer;
 }
 a:hover {
-    text-decoration: none;
+ text-decoration: none;
+}
+
+.gallery-container {
+  overflow: auto !important; /* Enable scrolling */
+  -webkit-overflow-scrolling: touch !important; /* Smooth scrolling for iOS */
+ 
+    position: relative !important;
+
 }
 
 .section{
-  position: relative;
-  width: 100%;
-  display: block;
+ position: relative;
+ width: 100%;
+ display: block;
 }
 .full-height{
-  min-height: 100vh;
+ min-height: 100vh;
 }
 .over-hide{
-  overflow: hidden;
+ overflow: hidden;
 }
 .padding-tb{
-  padding: 100px 0;
+ padding: 100px 0;
 }
 [type="radio"]:checked,
 [type="radio"]:not(:checked){
-  position: absolute;
-  left: -9999px;
+ position: absolute;
+ left: -9999px;
 }
 .checkbox:checked + label,
 .checkbox:not(:checked) + label{
-  position: relative;
-  cursor: pointer;
-  margin: 0 auto;
-  text-align: center;
-  margin-right: 6px;
-  margin-left: 6px;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border: 3px solid rgb(204, 160, 24);
-  background-size: cover;
-  background-position: center;
-  box-sizing: border-box;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-  background-image: url('images/RoadMap/image1.png');
-  animation: border-transform 6s linear infinite alternate forwards;
-    -webkit-animation-play-state: paused;
-    -moz-animation-play-state: paused;
-    animation-play-state: paused;
+ position: relative;
+ cursor: pointer;
+ margin: 0 auto;
+ text-align: center;
+ margin-right: 6px;
+ margin-left: 6px;
+ display: inline-block;
+ width: 50px;
+ height: 50px;
+ border: 3px solid rgb(204, 160, 24);
+ background-size: cover;
+ background-position: center;
+ box-sizing: border-box;
+ -webkit-transition: all 0.2s ease;
+ transition: all 0.2s ease;
+ background-image: url('images/RoadMap/image1.png');
+ animation: border-transform 6s linear infinite alternate forwards;
+ -webkit-animation-play-state: paused;
+ -moz-animation-play-state: paused;
+ animation-play-state: paused;
 }
 .checkbox.scnd + label{
-  background-image: url('images/RoadMap/image2.png');
+ background-image: url('images/RoadMap/image2.png');
 }
 .checkbox.thrd + label{
-  background-image: url('images/RoadMap/image3.png');
+ background-image: url('images/RoadMap/image3.png');
 }
 .checkbox.foth + label{
-  background-image: url('images/RoadMap/image4.png');
+ background-image: url('images/RoadMap/image4.png');
 }
 .checkbox.fifth + label{
-  background-image: url('images/RoadMap/image5.png');
+ background-image: url('images/RoadMap/image5.png');
 }
 .checkbox.six + label{
-  background-image: url('images/RoadMap/image5.png');
+ background-image: url('images/RoadMap/image5.png');
 }
 
 .checkbox:checked + label{
-  box-shadow: 0 8px 25px 0 rgba(16,39,112,.3);
-  transform: scale(1.3);
-    -webkit-animation-play-state: running;
-    -moz-animation-play-state: running;
-    animation-play-state: running;
+ box-shadow: 0 8px 25px 0 rgba(16,39,112,.3);
+ transform: scale(1.3);
+ -webkit-animation-play-state: running;
+ -moz-animation-play-state: running;
+ animation-play-state: running;
 }
 @keyframes border-transform{
-  0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+ 0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
+ 14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
+ 28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
+ 42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
+ 56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
+ 70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
+ 84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
 }
 
 .slider-height-padding {
-  padding-top: 440px;
+ padding-top: 440px;
 }
 
 ul {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  z-index: 100;
-  padding: 0;
-  margin: 0;
-  list-style: none;
+ position: absolute;
+ top: 0;
+ left: 0;
+ display: block;
+ width: 100%;
+ z-index: 100;
+ padding: 0;
+ margin: 0;
+ list-style: none;
 }
 ul li {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: block;
-  z-index: 100;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  height: 450px;
-  border: 5px solid rgb(204, 160, 24);
-  background-size: cover;
-  background-position: center;
-  background-image: url('images/RoadMap/image1.png');
-  border-radius: 50%;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  line-height: 2.7;
-  opacity: 0;
-  pointer-events: none;
-  box-shadow: 0 8px 25px 0 rgba(16,39,112,.1);
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ display: block;
+ z-index: 100;
+ padding: 0;
+ margin: 0;
+ list-style: none;
+ height: 450px;
+ border: 5px solid rgb(204, 160, 24);
+ background-size: cover;
+ background-position: center;
+ background-image: url('images/RoadMap/image1.png');
+ border-radius: 50%;
+ box-sizing: border-box;
+ font-family: 'Poppins', sans-serif;
+ line-height: 2.7;
+ opacity: 0;
+ pointer-events: none;
+ box-shadow: 0 8px 25px 0 rgba(16,39,112,.1);
+ -webkit-transition: all 0.5s ease;
+ transition: all 0.5s ease;
 }
 ul li span {
-  mix-blend-mode: difference;
+ mix-blend-mode: difference;
 }
 ul li:nth-child(2) {
-  background-image: url('images/RoadMap/image2.png');
+ background-image: url('images/RoadMap/image2.png');
 }
 ul li:nth-child(3) {
-  background-image: url('images/RoadMap/image3.png');
+ background-image: url('images/RoadMap/image3.png');
 }
 ul li:nth-child(4) {
-  background-image: url('images/RoadMap/image4.png');
+ background-image: url('images/RoadMap/image4.png');
 }
 ul li:nth-child(5) {
-  background-image: url('images/RoadMap/image5.png');
+ background-image: url('images/RoadMap/image5.png');
 }
 ul li:nth-child(6) {
-  background-image: url('images/RoadMap/image5.png');
+ background-image: url('images/RoadMap/image5.png');
 }
 
 
 .checkbox.frst:checked ~ ul li:nth-child(1) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 .checkbox.scnd:checked ~ ul li:nth-child(2) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 .checkbox.thrd:checked ~ ul li:nth-child(3) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 .checkbox.foth:checked ~ ul li:nth-child(4) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 .checkbox.fifth:checked ~ ul li:nth-child(5) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 .checkbox.six:checked ~ ul li:nth-child(6) {
-  opacity: 1;
-  pointer-events: auto;
-  border-radius: 16px;
+ opacity: 1;
+ pointer-events: auto;
+ border-radius: 16px;
 }
 
 @media (min-width:767px) {
-  .rowContent{
-    margin-top: -30px !important;
-  }
-  .labelSection label{
-    margin-top: 20px !important;
-  }
+ .rowContent{
+ margin-top: -30px !important;
+ }
+ .labelSection label{
+ margin-top: 20px !important;
+ }
 }
 
 @media (max-width: 767px) {
-  .slider-height-padding {
-    padding-top: 340px;
-  }
+ .slider-height-padding {
+ padding-top: 340px;
+ }
+ ul li {
+ height: 300px;
+ font-size: 13px;
+ letter-spacing: 1px;
+ }
+}
+
+/* @media (max-width: 575px) {
+ .slider-height-padding {
+ padding-top: 240px;
+ }
+ ul li {
+ height: 215px;
+ }
+
+ .labelSection label{
+ margin-top: 30px !important;
+ height: 40px !important;
+ width: 40px !important;
+ margin-left: 0px !important;
+ margin-right: 0px !important;
+ }
+ hashtag#afterGalleryContainer{
+ padding-right: 0px !important;
+ padding-left: 0px !important;
+ }
+} */
+@media (max-width: 575px) {
   ul li {
-    height: 300px;
-    font-size: 13px;
-    letter-spacing: 1px;
+    top: -64px;
+    aspect-ratio: 2 / 3; /* Define the aspect ratio (width/height) */
+    width: 100%; /* Set the width to 100% of the container */
+    /* max-width: 274px; Optional: Limit the width for larger screens */
+    height: auto; /* Height adjusts based on the aspect ratio */
+    background-size: cover; /* Cover the entire area while maintaining the aspect ratio */
+    background-repeat: no-repeat; /* Avoid tiling */
+    margin: 0 auto; /* Center the element */
+    background-position: center; /* Center the image */
+    background-image: url('images/m-roadmap/image1.png');
+    /* border: none !important; */
+}
+/* .labelSection{
+  width: 85% !important;
+  margin: 0px auto !important;
+} */
+
+#afterGalleryContainer{
+  width: 65%;
+  margin: 0px auto;
+}
+
+ /* Map portrait images to respective checkboxes */
+ .checkbox.frst:checked ~ ul li:nth-child(2) {
+ background-image: url('images/m-roadmap/image1.png') !important;
+ }
+ .checkbox.scnd:checked ~ ul li:nth-child(3) {
+ background-image: url('images/m-roadmap/image3.png') !important;
+ }
+ .checkbox.thrd:checked ~ ul li:nth-child(4) {
+ background-image: url('images/m-roadmap/image4.png') !important;
+ }
+ .checkbox.foth:checked ~ ul li:nth-child(5) {
+ background-image: url('images/m-roadmap/image5.png') !important;
+ }
+ .checkbox.fifth:checked ~ ul li:nth-child(6) {
+ background-image: url('images/m-roadmap/image5.png') !important;
+ }
+
+ ul li:nth-child(2) {
+background-image: url('images/m-roadmap/image2.png') !important;
+ }
+
+
+ ul li:nth-child(3) {
+background-image: url('images/m-roadmap/image3.png') !important;
+ }
+ ul li:nth-child(4) {
+background-image: url('images/m-roadmap/image4.png') !important;
+ }
+ ul li:nth-child(5) {
+background-image: url('images/m-roadmap/image5.png') !important;
+ }
+}
+
+
+@media (max-width: 490px) {
+  #afterGalleryContainer{
+    width: 70%;
+    margin: 0px auto;
   }
 }
 
-@media (max-width: 575px) {
-  .slider-height-padding {
-    padding-top: 240px;
-  }
-  ul li {
-    height: 215px;
-  }
-
-  .labelSection label{
-    margin-top: 80px !important;
-    height: 40px !important;
-    width: 40px !important;
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-  }
+@media (max-width: 450px) {
   #afterGalleryContainer{
-    padding-right: 0px !important;
-    padding-left: 0px !important;
+    width: 75%;
+    margin: 0px auto;
+  }
+}
+
+@media (max-width: 400px) {
+  #afterGalleryContainer{
+    width: 85%;
+    margin: 0px auto;
+  }
+}
+
+@media (max-width: 370px) {
+  #afterGalleryContainer{
+    width: 92%;
+    margin: 0px auto;
   }
 }
